[package]
name = "eventroute"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Holloway <nyxtom@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Type safe event dispatching with functional middleware"
homepage = "https://github.com/nyxtom/eventroute"
repository = "https://github.com/nyxtom/eventroute"
keywords = ["middleware", "events", "monad", "dispatch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
